level1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
  namespace: nginx-ns
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
